<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/bg_giftdetail_head"
        android:gravity="center_vertical" >

        <!-- 左边的 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <com.qianfeng.gameassistant.other.widget.CircleImageView
                android:id="@+id/gift_info_icon_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <TextView
                android:id="@+id/gift_info_consume_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_consume_bg"
                android:text="@string/gift_info_consume_string" />
        </LinearLayout>

        <!-- 右边的 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gift_info_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:text="@string/gift_info_gift_name"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/gift_info_remain_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_info_remains" />

                <ProgressBar
                    android:id="@+id/gift_info_pb"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:progress="30"
                    android:progressDrawable="@drawable/layer_progress" />

                <TextView
                    android:id="@+id/gift_info_per_tv"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gift_info_per" />
            </LinearLayout>

            <TextView
                android:id="@+id/gift_info_validity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:text="@string/gift_info_validity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/gift_info_platform_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platform" />

                <ImageView
                    android:id="@+id/gift_info_android_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_android"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/gift_info_ios_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_ios"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- 游戏类型,大小,下载游戏 -->

    <RelativeLayout
        android:id="@+id/gift_info_game_type_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/game_type_bg_color"
        android:padding="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/gift_info_game_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/game_type" />

        <TextView
            android:id="@+id/gift_info_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/gift_info_game_type_tv"
            android:text="@string/game_size" />

        <Button
            android:id="@+id/gift_info_down_btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_gift_blue_btn"
            android:text="@string/gift_info_load" />
    </RelativeLayout>
    <!-- 游戏礼包内容,领取方式 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/list_item_yellow_btn_color"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_info_content"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gift_info_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gift_info_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_info_get_method"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/gift_info_howget_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/gift_info_get_method"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>